# proxmox-ve-rs

./: Cargo.toml  Makefile  build.sh
proxmox-frr/: Cargo.toml
proxmox-frr-templates/debian/: changelog
proxmox-frr-templates/templates/: bgp_router.jinja  bgpd.jinja  ospfd.jinja  route_maps.jinja
proxmox-frr/debian/: changelog  control
proxmox-frr/src/: lib.rs  openfabric.rs  ospf.rs  route_map.rs  serializer.rs
proxmox-frr/src/de/: evpn.rs  mod.rs  openfabric.rs  ospf.rs
proxmox-frr/src/ser/: bgp.rs  mod.rs  openfabric.rs  ospf.rs  route_map.rs  serializer.rs
proxmox-sdn-types/: Cargo.toml
proxmox-sdn-types/debian/: changelog  control  debcargo.toml
proxmox-sdn-types/src/: area.rs  bgp.rs  lib.rs  net.rs  openfabric.rs  ospf.rs  wireguard.rs
proxmox-ve-config/: Cargo.toml
proxmox-ve-config/debian/: changelog  control  debcargo.toml
proxmox-ve-config/resources/: macros.json
proxmox-ve-config/src/: lib.rs
proxmox-ve-config/src/common/: mod.rs  valid.rs
proxmox-ve-config/src/firewall/: bridge.rs  cluster.rs  common.rs  ct_helper.rs  guest.rs  host.rs  mod.rs  parse.rs
proxmox-ve-config/src/firewall/types/: address.rs  alias.rs  group.rs  ipset.rs  log.rs  mod.rs  port.rs  rule.rs  rule_match.rs
proxmox-ve-config/src/guest/: types.rs  vm.rs
proxmox-ve-config/src/host/: mod.rs  network.rs  types.rs  utils.rs
proxmox-ve-config/src/sdn/: config.rs  frr.rs  ipam.rs  mod.rs  prefix_list.rs  route_map.rs  wireguard.rs
proxmox-ve-config/src/sdn/fabric/: frr.rs  mod.rs
proxmox-ve-config/src/sdn/fabric/section_config/: fabric.rs  interface.rs  mod.rs  node.rs
proxmox-ve-config/src/sdn/fabric/section_config/protocol/: bgp.rs  mod.rs  openfabric.rs  ospf.rs  wireguard.rs
proxmox-ve-config/tests/fabric/: helper.rs  main.rs
proxmox-ve-config/tests/fabric/cfg/bgp_default/: fabrics.cfg
proxmox-ve-config/tests/fabric/cfg/bgp_ipv6_only/: fabrics.cfg
proxmox-ve-config/tests/fabric/cfg/openfabric_default/: fabrics.cfg
proxmox-ve-config/tests/fabric/cfg/openfabric_dualstack/: fabrics.cfg
proxmox-ve-config/tests/fabric/cfg/openfabric_ipv6_only/: fabrics.cfg
proxmox-ve-config/tests/fabric/cfg/openfabric_loopback/: fabrics.cfg
proxmox-ve-config/tests/fabric/cfg/openfabric_loopback_prefix_fail/: fabrics.cfg
proxmox-ve-config/tests/fabric/cfg/openfabric_multi_fabric/: fabrics.cfg
proxmox-ve-config/tests/fabric/cfg/openfabric_verification_fail/: fabrics.cfg
proxmox-ve-config/tests/fabric/cfg/ospf_default/: fabrics.cfg
proxmox-ve-config/tests/fabric/cfg/ospf_loopback_prefix_fail/: fabrics.cfg
proxmox-ve-config/tests/fabric/cfg/ospf_multi_fabric/: fabrics.cfg
proxmox-ve-config/tests/fabric/cfg/ospf_verification_fail/: fabrics.cfg
proxmox-ve-config/tests/fabric/snapshots/: fabric__bgp_default_pve.snap  fabric__bgp_default_pve1.snap  fabric__bgp_ipv6_only_pve.snap  fabric__bgp_ipv6_only_pve1.snap  fabric__bgp_merge_with_evpn_pve.snap  fabric__openfabric_default_pve.snap  fabric__openfabric_default_pve1.snap  fabric__openfabric_dualstack_pve.snap  fabric__openfabric_ipv6_only_pve.snap  fabric__openfabric_multi_fabric_pve1.snap  fabric__ospf_default_pve.snap  fabric__ospf_default_pve1.snap  fabric__ospf_multi_fabric_pve1.snap
proxmox-ve-config/tests/prefix_lists/: main.rs
proxmox-ve-config/tests/route_maps/: main.rs
proxmox-ve-config/tests/sdn/: main.rs
proxmox-ve-config/tests/sdn/resources/: ipam.db  running-config.json
