[workspace]
members = [
    "proxmox-ve-config",
    "proxmox-frr",
    "proxmox-sdn-types",
]
exclude = [
    "build",
]
resolver = "2"

[workspace.package]
authors = ["Proxmox Support Team <support@proxmox.com>"]
edition = "2021"
license = "AGPL-3"
homepage = "https://proxmox.com"
exclude = [ "debian" ]
rust-version = "1.82"

[workspace.dependencies]
anyhow = "1"
const_format = "0.2"
regex = "1.7"
serde = { version = "1" }
serde_with = "3"
thiserror = "2.0.0"

proxmox-network-types = { version = "0.1" }
proxmox-schema = { version = "4" }
proxmox-sdn-types = { version = "0.1", path = "proxmox-sdn-types" }
