[package]
name = "proxmox-frr"
description = "Rust types for the FRR configuration file"
version = "0.3.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
exclude.workspace = true
rust-version.workspace = true

[dependencies]
thiserror = { workspace = true }
anyhow = "1"
tracing = "0.1"
serde = { workspace = true, features = [ "derive" ] }
serde_repr = "0.1"
minijinja = { version = "2.5", features = [ "multi_template", "loader" ] }

proxmox-network-types = { workspace = true, features = ["api-types"] }
proxmox-sdn-types = { workspace = true }
proxmox-serde = { workspace = true }
proxmox-sortable-macro = "1"
