[package]
name = "proxmox-sdn-types"
version = "0.1.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
exclude.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = [ "derive" ] }

proxmox-schema = { workspace = true, features = [ "api-macro", "api-types" ] }
proxmox-serde = { workspace = true, features = [ "perl" ] }
