[package]
name = "proxmox-ve-config"
version = "0.4.4"
authors.workspace = true
edition.workspace = true
license.workspace = true
exclude.workspace = true

[dependencies]
log = "0.4"
anyhow = { workspace = true }
nix = "0.29"
regex = { workspace = true }
const_format = { workspace = true }
thiserror = { workspace = true }
tracing = "0.1.37"

serde = { workspace = true, features = [ "derive" ] }
serde_json = "1"

proxmox-frr = { workspace = true, optional = true }
proxmox-network-types = { workspace = true, features = [ "api-types" ] }
proxmox-schema = { workspace = true, features = [ "api-types" ] }
proxmox-sdn-types = { workspace = true }
proxmox-section-config = { version = "3" }
proxmox-serde = { workspace = true, features = [ "perl" ]}
proxmox-sys = "1"
proxmox-sortable-macro = "1"

[features]
frr = ["dep:proxmox-frr"]

[dev-dependencies]
insta = "1.21"
